<resources>
    <string name="app_name">Awesome series</string>

    <string name="myseries_name">My series</string>
    <string name="search_name">Search</string>

    <string name="action_settings">Settings</string>
    <string name="title_search">Search series</string>

    <string name="edittext_message">Introdce the name of the serie here...</string>

    <string name="noseries_message">There are no seires for this name. Please, refine the search..</string>
    <string name="nonetwork_message">There are problems with the network.</string>
    <string name="noserver_message">There are problems with the series source, try again, if the problem persists come later.</string>

    <string name="save_serie">Save the serie</string>
    <string name="unsave_serie">Unsave the serie</string>
    <string name="votes_serie">votes</string>
    <string name="rating_serie">/10</string>
    <string name="year_serie">Year</string>
    <string name="network_serie">Network</string>
    <string name="genre_serie">Genre</string>
    <string name="overview_serie">Overview</string>
    <string name="detail_serie">Detail</string>
    <string name="check_serie">Check out </string>

    <string name="data_not_found">No data found.</string>
    <string name="series_widget" translatable="false">My Series</string>

    <string name="content_authority">ivan.capstone.com.capstone</string>
    <string name="transition_photo">transition_photo</string>

    <string name="poster_description">The poster of the serie</string>
    <string name="save_description">The save image button</string>
    <string name="unsave_description">The delete image button</string>
    <string name="share_description">The share image button</string>
    <string name="banner_description">The banner of the serie</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_detail_serie">DetailSerieActivity</string>
    <string name="title_activity_detail_serie_searched">DetailSerieSearchedActivity</string>


  </resources>
