<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/small_margin">

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="10dp"
                card_view:cardElevation="10dp">

                <ImageView
                    android:id="@+id/poster"
                    android:contentDescription="@string/poster_description"
                    android:layout_height="300dp"
                    android:layout_width="match_parent"
                    android:transitionName="@string/transition_photo"
                     />

            </android.support.v7.widget.CardView>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:baselineAligned="false"
                android:padding="@dimen/medium_margin">


                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="0dp"
                    android:layout_weight=".50"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/share"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:contentDescription="@string/share_description"
                        android:background="@drawable/touch_detail_selector"
                        android:src="@android:drawable/ic_menu_share"/>

                </LinearLayout>

                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="0dp"
                    android:layout_weight=".50"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <ImageButton
                        android:id="@+id/iv_tick_off"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="visible"
                        android:gravity="center"
                        android:contentDescription="@string/save_description"
                        android:background="@drawable/touch_detail_selector"
                        android:src="@android:drawable/star_big_off"/>


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:id="@+id/save_serie"
                        android:textSize="@dimen/test_normal_size"
                        android:gravity="center"
                        android:text="@string/save_serie" />

                    <ImageButton
                        android:id="@+id/iv_tick_on"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        android:gravity="center"
                        android:contentDescription="@string/unsave_description"
                        android:background="@drawable/touch_detail_selector"
                        android:src="@android:drawable/btn_star_big_on" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:id="@+id/unsave_serie"
                        android:visibility="gone"
                        android:textSize="@dimen/test_normal_size"
                        android:gravity="center"
                        android:text="@string/unsave_serie" />

                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorPrimary"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceMedium"
                android:id="@+id/text_detail_serie"
                android:textColor="@color/black"
                android:textSize="@dimen/test_title_size"
                android:paddingTop="@dimen/medium_margin"
                android:text="@string/detail_serie"
                android:gravity="center"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceMedium"
                android:id="@+id/rating_serie"
                android:textColor="@color/black"
                android:padding="@dimen/small_margin"
                android:textSize="@dimen/test_normal_size"
                 />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceMedium"
                android:id="@+id/network_serie"
                android:padding="@dimen/small_margin"
                android:textColor="@color/black"
                android:textSize="@dimen/test_normal_size" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceMedium"
                android:id="@+id/releasedDate_serie"
                android:textColor="@color/black"
                android:padding="@dimen/small_margin"
                android:textSize="@dimen/test_normal_size" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceMedium"
                android:id="@+id/genre_serie"
                android:textColor="@color/black"
                android:textSize="@dimen/test_normal_size"
                android:paddingLeft="@dimen/small_margin"
                android:paddingTop="@dimen/small_margin"
                android:paddingRight="@dimen/small_margin"
                android:paddingBottom="@dimen/large_margin"

                />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorPrimary"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceMedium"
                android:id="@+id/text_overview_serie"
                android:textColor="@color/black"
                android:textSize="@dimen/test_title_size"
                android:paddingTop="@dimen/medium_margin"
                android:text="@string/overview_serie"
                android:gravity="center"
                android:textStyle="bold" />

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/description_wrapper" />

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/card_view2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="5dp"
                card_view:cardElevation="10dp"
                android:layout_margin="@dimen/small_margin">

                <ImageView
                    android:id="@+id/banner"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:padding="@dimen/small_margin"
                    android:contentDescription="@string/banner_description"
                    android:background="@color/light_grey"
                    />

            </android.support.v7.widget.CardView>
        </LinearLayout>
</ScrollView>